Revision history for Perl extension Catalyst::View::TT.

0.37   2011-07-17 09:20:00
        - Allow setting of TT class rather than forcing 'Template'

0.36   2010-10-19 15:00:00
        - Fixed subclassing when using expose_methods

0.35   2010-08-26 01:38:00
        - Add expose_methods functionality
        - add template name to exceptions
        - update render_die message to be more concise.
        - Doc fixes (RT#57159)
        - Silence warnings about Template::Provider::Encoding (RT #56310)

0.34   2010-04-07 04:14:50
        - Fix the process method to have the previous behaviour of reporting
          an error to Catalyst if a Template::Exception object is returned by
          the render method (i.e. when render_die is unset or set to 0).
        - Fix the warning issued about missing the render_die config option to
          log using the standard Catalyst logging system (rather than Carping
          directly), and to only issue the warning at debug level / when
          in debug mode. The severity of this warning will be increased in
          a later release.

0.33   2010-03-10 20:08:00
        - The "render()" method now throws a warning on exception before
          returning the exception. To silence the warning, pass 'render_die =>
          0' to the constructor. Better yet, pass 'render_die => 1' to make it
          die instead of returning the excption. This will be the default in a
          future release when unspecified. The Helper will generate new views
          with render_die => 1.

0.32    2010-02-16 05:55:00
        - Various documentation improvements.
        - Fix repository metadata.

0.31    2009-10-29 19:26:00
        - Moved the test actions to their own controller file to silence
          warning about actions in the app class being deprecated.

0.30    2009-09-12 23:47:00
        - Doc fixes:
          + Expand ::V:: to ::View:: (RT #45792)
          + Expand ::C:: to ::Controller:: and use $c->view('TT')