@@ -1,5 +1,8 @@
 Revision history for Perl extension Catalyst::View::TT.
 
+        - Change code generated by Catalyst::Helper::View::TT
+          to use Moose.
+
 0.37   2011-07-17 09:20:00
         - Allow setting of TT class rather than forcing 'Template'
 
